--- a/01_create_human_connectome.ipynb
+++ b/01_create_human_connectome.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "# Threshold each row of the matrix by setting values below 90th percentile to 0\n",
     "for i in range(dcon.shape[0]):\n",
-    "  print \"Row %d\" % i\n",
+    "  print("Row", i)\n",
     "  dcon[i, dcon[i,:] < perc[i]] = 0    "
    ]
   },
@@ -48,12 +48,12 @@
    "outputs": [],
    "source": [
     "# Check for minimum value\n",
-    "print \"Minimum value is %f\" % dcon.min()\n",
+    "print("Minimum value is ", dcon.min())\n",
     "\n",
     "# The negative values are very small, but we need to know how many nodes have negative values\n",
     "# Count negative values per row\n",
     "neg_values = np.array([sum(dcon[i,:] < 0) for i in range(N)])\n",
-    "print \"Negative values occur in %d rows\" % sum(neg_values > 0)\n",
+    "print("Negative values occur in ", sum(neg_values > 0), "rows\n",
     "\n",
     "# Since there are only 23 vertices with total of 5000 very small negative values, we set these to zero\n",
     "dcon[dcon < 0] = 0"
